@@ -44,6 +44,12 @@ wallet 0.10 (unreleased)
 
     Report ACL names as well as numbers in object history.
 
+    The wallet client now uses a temporary disk ticket cache when
+    obtaining tickets with the -u option rather than an in-memory cache,
+    allowing for a libremctl built against a different Kerberos
+    implementation than the wallet client.  This primarily helps with
+    testing.
+
 wallet 0.9 (2008-04-24)
 
     The wallet command-line client now reads the data for store from a
